frontend/src/pages/Appointments/Appointments.css
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css");

.appointment-page {
  width: 100%;
  display: flex;
  justify-content: center;
  background-color: white;
  /* padding: 50px 0px; */
  margin: 0 auto;
  margin-top: clamp(2.5rem, 3.5vw, 4rem);
  margin-bottom: clamp(2.5rem, 3.5vw, 4rem);
}

.appointment-container {
  display: grid;
  grid-template-rows: auto 450px auto;
  max-width: 1000px;
  width: 100%;
}

.provider-content {
  display: grid;
  grid-template-rows: auto auto auto auto;
  gap: 10px;
  margin-bottom: clamp(0.93rem, 0.93vw, 0.93rem);
}

.provider-content h1 {
  justify-self: center;
  font-size: clamp(2rem, 3.5vw, 2.5rem);
  font-weight: 700;
  color: #1f3a5f;
}

.provider-img-container {
  max-width: 1000px;
  width: 100%;
  max-height: 400px;
  overflow: hidden;
}

.provider-img-container img {
  width: 100%;
  height: auto;
  /* border-radius: 12px; */
  object-fit: contain;
}

.provider-info,
.provider-details {
  display: flex;
  flex-direction: column;
  margin-top: 10px;
  margin-bottom: 20px;
  font-size: clamp(1rem, 2vw, 1.25rem);
  text-align: center;
  color: #333333;
}

.provider-info img {
  width: 25px;
  height: 25px;
  align-self: center;
  font-size: clamp(1rem, 2vw, 1.25rem);
}

.flex-gap {
  display: flex;
  gap: 20px;
  margin-bottom: 3px;
}

.bookings-banner {
  display: flex;
  max-width: 100%;
  background-color: #ffc72c;
  border-radius: 10px;
  padding: 0rem 1rem;
  min-height: 3rem;
  align-content: center;
}

.bookings-banner h3 {
  color: #1f3a5f;
  align-self: center;
  margin-bottom: 0;
  font-size: clamp(1.25rem, 2.25vw, 1.5rem);
  font-weight: 700;
}

.bookings-container {
  /* display: flex;
  flex-direction: column; */
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 0.5rem;
}

.appointment-page .date-container {
  display: flex;
  font-size: clamp(0.93rem, 1.5vw, 1.25rem);
  flex-direction: row;
  justify-content: center;
  max-width: 400px;
  width: 100%;
  height: auto;
  margin-top: 2rem;
}

.appointment-page .time-container {
  display: grid;
  font-size: clamp(0.93rem, 1.5vw, 1.25rem);
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(6, 40px);
  gap: 0.5rem;
  margin-top: 20px;
  justify-content: center;
  align-items: center;
}

.time-button {
  font-size: clamp(0.93rem, 1.5vw, 1.25rem);
  height: 30px;
  border: none;
  border-radius: 10px;
  background-color: #e8eaee;
  border: 3px solid #e8eaee;
  color: #1f3a5f;
}

.action-btn-container {
  height: 100%;
  display: flex;
  justify-content: flex-end;
  gap: 0.5rem;
}

.action-btn-format {
  width: 80px;
  max-height: 40px;
  border-radius: 10px;
  text-align: center;
  border: none;
}

.grey-btn {
  background-color: transparent;
  border: 3px solid #ffc72c;
  color: #1f3a5f;
  width: clamp(11rem, 25vw, 12.5rem);
  height: clamp(2.1875rem, 5vw, 2.5rem);
  border-radius: 20px;
  font-weight: 700;
  font-size: clamp(1rem, 2vw, 1.1rem);
}

.grey-btn:hover {
  background-color: #e8eaee;
  border: 3px solid #e8eaee;
}

.action-btn-container .navy-btn {
  border: 3px solid #1f3a5f !important;
  background-color: transparent;
  color: #1f3a5f;
  width: clamp(11rem, 25vw, 12.5rem);
  height: clamp(2.1875rem, 5vw, 2.5rem);
  border: none;
  border-radius: 20px;
  font-weight: 700;
  font-size: clamp(1rem, 2vw, 1.1rem);
}

.action-btn-container .navy-btn:hover {
  background-color: #1f3a5f;
  color: #ffc72c;
  border: 3px solid #1f3a5f !important;
}

/* popup css */
body.modal-open {
  overflow: hidden;
}

.appointment-page .provider-modal {
  background: transparent !important;
  border-radius: 10px;
  overflow: hidden;
  max-width: 500px;
  width: 100%;
}

/* .pet-form-container {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  width: 100%; 
} */

.css-qct7wd-MuiButtonBase-root-MuiPickersDay-root.Mui-selected {
  background-color: #ffc72c !important;
  border: 3px solid #ffc72c !important;
}

/* Calendary */

.css-4k4mmf-MuiButtonBase-root-MuiPickersDay-root:hover {
  border: 3px solid #ffc72c !important;
  background-color: transparent !important;
}

.css-4k4mmf-MuiButtonBase-root-MuiPickersDay-root.Mui-selected {
  color: white;
  background-color: #ffc72c !important;
  border: 3px solid #ffc72c !important;
  font-weight: 500;
}

/* ============================
   RESPONSIVE
============================== */

/* Tablets */
@media (min-width: 601px) and (max-width: 1024px) {
  .appointment-container {
    max-width: 90%;
    grid-template-rows: auto 400px auto;
  }

  .provider-content h1 {
    font-size: clamp(1.8rem, 4vw, 2.2rem);
  }

  .provider-img-container {
    max-height: 300px;
  }

  .bookings-container {
    grid-template-columns: 1fr 1fr;
    gap: 0.5rem;
  }

  .action-btn-container {
    margin-bottom: 50% !important;
  }

  .appointment-page .time-container {
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(6, 40px);
    gap: 0.4rem;
  }

  .grey-btn,
  .action-btn-container .navy-btn {
    width: 90px;
    height: 40px;
    font-size: clamp(0.9rem, 2vw, 1rem);
  }

  .review-list-container {
    padding: 20px;
  }

  .review-card {
    gap: 0.8rem;
  }
}

/* Mobiles */
@media (max-width: 600px) {
  .appointment-container {
    grid-template-rows: auto auto auto;
  }

  .provider-content h1 {
    font-size: clamp(1.5rem, 5vw, 2rem);
  }

  .provider-img-container {
    max-height: 200px;
  }

  .bookings-container {
    grid-template-columns: 1fr;
    gap: 0.5rem;
  }

  .appointment-page .date-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 200%;
    max-width: 400px;
    gap: 10px;
    justify-self: center;
    align-self: start;
    margin-left: 70px;
  }

  /* Make the calendar taller */
  .appointment-page
    .date-container
    .css-1n1xn3x-MuiPickersSlideTransition-root-MuiDayCalendar-slideTransition {
    min-height: 400px;
    width: 100%;
  }

  /* Make the day buttons bigger */
  .appointment-page
    .date-container
    .css-4k4mmf-MuiButtonBase-root-MuiPickersDay-root {
    height: 40px;
    width: 40px;
    font-size: 1rem;
    margin: 1px;
    border-radius: 50%px;
  }

  .appointment-page
    .date-container
    .css-4k4mmf-MuiButtonBase-root-MuiPickersDay-root.Mui-selected {
    font-size: 1rem;
  }

  .appointment-page .time-container {
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(6, 35px);
    gap: 0.93rem;
  }

  .time-button {
    height: 30px;
    font-size: 0.85rem;
  }

  .grey-btn,
  .action-btn-container .navy-btn {
    width: 100%;
    height: 45px;
    font-size: clamp(0.9rem, 2.5vw, 1rem);
  }

  /* Review Section */
  .review-list-container {
    padding: 15px;
  }

  .review-header-wrapper {
    flex-direction: column;
    align-items: flex-start;
  }

  .reviews-grid {
    flex-direction: column;
    gap: 1rem;
  }

  .review-card {
    padding: 0.8rem;
    gap: 0.5rem;
  }

  .review-title {
    font-size: clamp(1.1rem, 4vw, 1.3rem);
  }

  .review-text {
    font-size: clamp(0.75rem, 2.5vw, 0.95rem);
  }

  .star {
    font-size: 1.5rem;
  }
}

